<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/tv_week1"
        style="@style/style_grid_item"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:gravity="center_vertical"
        android:text="@string/week1" />
    
    <TextView
        android:id="@+id/tv_week2"
        style="@style/style_grid_item"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:gravity="center_vertical"
        android:text="@string/week2" />
    
    <TextView
        android:id="@+id/tv_week3"
        style="@style/style_grid_item"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:gravity="center_vertical"
        android:text="@string/week3" />
    
    <TextView
        android:id="@+id/tv_week4"
        style="@style/style_grid_item"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:gravity="center_vertical"
        android:text="@string/week4" />
    
    <TextView
        android:id="@+id/tv_week5"
        style="@style/style_grid_item"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:gravity="center_vertical"
        android:text="@string/week5" />

</LinearLayout>