<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tv_time"
        style="@style/style_grid_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="?attr/common_bar_bg"
        android:gravity="center"
        android:text="@string/chart_title_time" />

    <TextView
        android:id="@+id/tv_open_price"
        style="@style/style_grid_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="?attr/common_bar_bg"
        android:gravity="center"
        android:text="@string/chart_ohlc_open" />

    <TextView
        android:id="@+id/tv_close_price"
        style="@style/style_grid_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="?attr/common_bar_bg"
        android:gravity="center"
        android:text="@string/chart_ohlc_close"  />

    <TextView
        android:id="@+id/tv_turnover_rate"
        style="@style/style_grid_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="?attr/common_bar_bg"
        android:gravity="center"
        android:text="@string/chart_title_turnover_rate"  />

    <TextView
        android:id="@+id/tv_change_rate"
        style="@style/style_grid_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="?attr/common_bar_bg"
        android:gravity="center" 
        android:text="@string/chart_title_change" />

</LinearLayout>