<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_header_height"
    android:background="?attr/common_list_header_bg" >

    <TextView
        android:id="@+id/tv_header_select"
        style="@style/style_text_list_header"
        android:layout_width="64dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/mystocks_edit_header_select" />

    <TextView
        android:id="@+id/tv_header_drag"
        style="@style/style_text_list_header"
        android:layout_width="64dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/mystocks_edit_header_drag" />

    <TextView
        android:id="@+id/tv_header_totop"
        style="@style/style_text_list_header"
        android:layout_width="64dp"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/tv_header_drag"
        android:gravity="center"
        android:text="@string/mystocks_edit_header_totop"/>

    <TextView
        style="@style/style_text_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_toLeftOf="@+id/tv_header_totop"
        android:layout_toRightOf="@+id/tv_header_select"
        android:layout_centerVertical="true"
        android:text="@string/mystocks_edit_header_stock_info" />

</RelativeLayout>