<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/list_header_height"
    android:background="?attr/common_list_header_bg" >

    <LinearLayout
        android:id="@+id/profit_panel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_header_height"
        android:layout_alignParentRight="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_today_profit"
            style="@style/style_text_list_header"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/portfolio_item_today_profit" />

        <TextView
            android:id="@+id/tv_total_profit"
            style="@style/style_text_list_header"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/portfolio_item_total_profit" />

        <TextView
            android:id="@+id/tv_amount"
            style="@style/style_text_list_header"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/portfolio_item_amount" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_stock"
        style="@style/style_text_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_toLeftOf="@+id/profit_panel"
        android:text="@string/mystocks_edit_header_stock_info" />

</RelativeLayout>