<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/common_content_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/user_panel"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="?attr/common_list_header_bg" >

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="45dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/photo_default" />

        <ImageView
            android:id="@+id/iv_photo_mark"
            android:layout_width="45dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/photo_mark" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/style_label_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_photo"
            android:text="@string/personal_not_login" />
        
        <ImageView
            android:id="@+id/iv_arrow"
            style="@style/Item_Right_Pic_Style"
            android:background="@drawable/item_arrow" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 手机号码 -->
            <com.pplt.ui.PreferenceItem
                android:id="@+id/item_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/preference_margin"
                app:piShowArrow="false"
                app:piStyle="top"
                app:piTitle="@string/phone" />

            <!-- 修改密码 -->
            <com.pplt.ui.PreferenceItem
                android:id="@+id/item_change_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:piStyle="middle"
                app:piTitle="@string/personal_change_pwd" />

            <!-- 昵称 -->
            <com.pplt.ui.PreferenceItem
                android:id="@+id/item_nick_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:piStyle="middle"
                app:piTitle="@string/personal_item_nick_name" />

            <!-- 居住地 -->
            <com.pplt.ui.PreferenceItem
                android:id="@+id/item_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:piStyle="middle"
                app:piTitle="@string/personal_item_place" />

            <!-- 性别 -->
            <com.pplt.ui.PreferenceItem
                android:id="@+id/item_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:piStyle="middle"
                app:piTitle="@string/personal_item_gender" />

            <!-- 个人简介 -->
            <com.pplt.ui.PreferenceItem
                android:id="@+id/item_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:piStyle="bottom"
                app:piTitle="@string/personal_item_introduction" />

            <!-- 退出登录 -->
            <TextView
                android:id="@+id/tv_logout"
                style="@style/style_text_medium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/preference_margin"
                android:layout_marginLeft="@dimen/edge_margin"
                android:layout_marginRight="@dimen/edge_margin"
                android:layout_marginTop="@dimen/preference_margin"
                android:background="@drawable/btn_bg_red"
                android:gravity="center"
                android:text="@string/personal_logout"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>